<resources>
    <string name="app_name">ACME Cafe</string>
    <!-- Strings related to authentication -->
    <string name="prompt_user">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_nif">NIF</string>
    <string name="prompt_card_no">Card Number</string>
    <string name="prompt_card_expiration">Expiration Date - MMYY</string>
    <string name="prompt_cvv">CVV</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="create_account">"Create Account"</string>
    <string name="action_sign_in">Sign in</string>
    <string name="re_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_nif">NIF must have 9 digits</string>
    <string name="invalid_card_no">Card number must have 16 digits</string>
    <string name="invalid_expiration_date">Expiration date must be in the format MMYY</string>
    <string name="invalid_cvv">CVV must have 3 digits</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirm_password">Passwords must match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registration">Registration</string>

    <string name="temp_string">Temporary Text</string>
    <string name="temp_price">XX.XX€</string>
    <string name="item_icon_description">Item Icon</string>

    <string name="menu_items">Available Items</string>
    <string name="menu_order">Make Order</string>
    <string name="menu_receipts">Receipts</string>
    <string name="menu_receipt">Receipt</string>
    <string name="menu_send_order">Send Order</string>

    <string name="receipt_discount_voucher">Discount Voucher:</string>
    <string name="receipt_coffee_voucher_no">Coffee Vouchers:</string>
    <string name="receipt_total">Total:</string>
    <string name="temp_date">DD-MM-YYYY HH:MM</string>
    <string name="temp_quantity">x QQ</string>

    <string name="generic_error">An error occurred, please try again</string>

    <string name="make_order_error">You must select at least one item to make an order</string>

    <string name="update_receipts">Update Receipts</string>
    <string name="update_vouchers">Update Vouchers</string>

    <string name="quantity_x">x</string>
    <string name="quantity_hint">Quantity</string>
    <string name="default_quantity">1</string>
    <string name="default_coffee_voucher_no">0</string>
    <string name="coffee_vouchers">Free Coffee Vouchers (%d left):</string>
    <string name="discount_voucher">Discount Voucher (%d left)</string>
    <string name="place_order">Place Order</string>
    <string name="fetching_vouchers">Retrieving new vouchers</string>
    <string name="item_quantity_error">Item quantity must be greater than 0</string>
    <string name="coffee_voucher_empty_error">A number is required</string>
    <string name="coffee_voucher_high_error">Not enough vouchers</string>
    <string name="nfc_error">NFC is not available on this device.</string>
    <string name="nfc_hold">Hold the device close to the terminal</string>

    <!-- Code -->
    <string name="error_string">error</string>
    <string name="user_preferences_file">com.ejn.cmov.acmecafe.mobile.registered_user</string>
    <string name="user_id">id</string>
    <string name="user_name">name</string>
    <string name="user_password">password</string>
    <string name="empty">empty</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>