<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
    android:background="@color/colorPrimaryLight"
    android:layout_marginTop="20dp">

    <ImageView
        android:id="@+id/order_item_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/item_icon_description"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/order_item_name"
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/temp_string"
        android:textAlignment="center"
        android:textColor="@color/textBrown"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/order_item_price"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/temp_price"
        android:textAlignment="center"
        android:textColor="@color/textBrown"
        android:textSize="18sp" />

    <TextView
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/quantity_x"
        android:textAlignment="center"
        android:textColor="@color/textBrown"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/order_item_quantity"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/default_quantity"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

</LinearLayout>