<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_layout"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="horizontal"
    android:layout_marginTop="20dp">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/item_icon_description"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/temp_string"
        android:textAlignment="center"
        android:textColor="@color/textBrown"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/temp_price"
        android:textAlignment="center"
        android:textColor="@color/textBrown"
        android:textSize="18sp" />
</LinearLayout>