<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/receipt_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/colorPrimaryLight"
    android:paddingHorizontal="18dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/receipt_item_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">
        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/general_h_padding"
            android:orientation="vertical">
            <TextView
                android:id="@+id/receipt_coffee_voucher_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/receipt_coffee_voucher_no"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/receipt_discount_voucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/receipt_discount_voucher"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/receipt_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/receipt_total"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/receipt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/temp_date"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="5dp"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>